src/objects/zkmulti__RequestedShipmentDocuments__c.object
<CustomObject>
    <fields>
        <fullName>zkmulti__CO__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Certificate Of Origin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__CommercialInvoiceLetterHead__c</fullName>
        <label>Commercial Invoice LetterHead</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__CommercialInvoiceSignature__c</fullName>
        <label>Commercial Invoice Signature</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__CommercialInvoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Commercial Invoice</label>
        <referenceTo>zkmulti__CommercialInvoice__c</referenceTo>
        <relationshipLabel>Requested Shipment Documents</relationshipLabel>
        <relationshipName>FedEx2_Requested_Shipment_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zkmulti__Consolidation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Consolidation</label>
        <referenceTo>zkmulti__MultiPackageShipment__c</referenceTo>
        <relationshipLabel>Requested Shipment Documents</relationshipLabel>
        <relationshipName>Requested_Shipment_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zkmulti__EEIForm__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EEI Form</label>
        <referenceTo>zkmulti__EEIForm__c</referenceTo>
        <relationshipLabel>Requested Shipment Documents</relationshipLabel>
        <relationshipName>Requested_Shipment_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zkmulti__EnablePostShipmentUpload__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Post Shipment Upload</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__ExportDate__c</fullName>
        <label>Export Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>zkmulti__ImporterAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Sold-To / Importer of Records Account (if not same as consignee)</description>
        <inlineHelpText>Sold-To / Importer of Records Account (if not same as consignee)</inlineHelpText>
        <label>Sold-To/Importer Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Requested Shipment Documents</relationshipLabel>
        <relationshipName>FedEx2_Requested_Shipment_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zkmulti__ImporterSameAsConsignee__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Sold-To / Importer of Records Same as Consignee</description>
        <inlineHelpText>Sold-To / Importer of Records Same as Consignee</inlineHelpText>
        <label>Sold-To/Importer Same as Consignee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__Importer_City__c</fullName>
        <label>Importer City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Importer_Company__c</fullName>
        <label>Importer Company</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Importer_Contact_Email__c</fullName>
        <label>Importer Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>zkmulti__Importer_Contact_Name__c</fullName>
        <label>Importer Contact Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Importer_Contact_Phone__c</fullName>
        <label>Importer Contact Phone</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Importer_Country__c</fullName>
        <label>Importer Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Importer_State_Province__c</fullName>
        <label>Importer State/Province</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Importer_Street__c</fullName>
        <label>Importer Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>zkmulti__Importer_Tax_Id_Type__c</fullName>
        <label>Importer Tax Id Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Importer_Tax_Id__c</fullName>
        <label>Importer Tax Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Importer_Zip_Postal_Code__c</fullName>
        <label>Importer Zip/Postal Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Mod_Key__c</fullName>
        <label>Mod Key</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__NaftaCoSignature__c</fullName>
        <label>USMCA CO Signature</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__NaftaCo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>USMCA CO</label>
        <referenceTo>zkmulti__NaftaCo__c</referenceTo>
        <relationshipLabel>Requested Shipment Documents</relationshipLabel>
        <relationshipName>FedEx2_Requested_Shipment_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zkmulti__OverridePaperlessForIntlDocuments__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If selected, indicates that the specified international documents will not be submitted electronically to Carrier</description>
        <inlineHelpText>If selected, indicates that the specified international documents will not be submitted electronically to Carrier</inlineHelpText>
        <label>Override Paperless for Intl Documents</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__PartialCommercialInvoice__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Partial Commercial Invoice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__ProFormaInvoiceLetterHead__c</fullName>
        <label>Pro Forma Invoice LetterHead</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__ProFormaInvoiceSignature__c</fullName>
        <label>Pro Forma Invoice Signature</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__ProFormaInvoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pro Forma Invoice</label>
        <referenceTo>zkmulti__ProFormaInvoice__c</referenceTo>
        <relationshipLabel>Requested Shipment Documents</relationshipLabel>
        <relationshipName>FedEx2_Requested_Shipment_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zkmulti__Shipment__c</fullName>
        <label>Shipment</label>
        <referenceTo>zkmulti__MCShipment__c</referenceTo>
        <relationshipName>FedEx2_Requested_Shipment_Documents</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Requested Shipment Documents</label>
    <nameField>
        <displayFormat>ReqShipDocs-{00000000}</displayFormat>
        <label>Requested Shipment Documents Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Requested Shipment Documents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>